// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation errors 1`] = `
"File Loader Invalid Options

options.name should be string
options.name should pass \\"instanceof\\" keyword validation
options.name should match some schema in anyOf
"
`;

exports[`validation errors 2`] = `
"File Loader Invalid Options

options.outputPath should be string
options.outputPath should pass \\"instanceof\\" keyword validation
options.outputPath should match some schema in anyOf
"
`;

exports[`validation errors 3`] = `
"File Loader Invalid Options

options.publicPath should be string
options.publicPath should pass \\"instanceof\\" keyword validation
options.publicPath should match some schema in anyOf
"
`;

exports[`validation errors 4`] = `
"File Loader Invalid Options

options.context should be string
"
`;

exports[`validation errors 5`] = `
"File Loader Invalid Options

options.emitFile should be boolean
"
`;

exports[`validation errors 6`] = `
"File Loader Invalid Options

options.regExp should be string
options.regExp should pass \\"instanceof\\" keyword validation
options.regExp should match some schema in anyOf
"
`;
